# DroneRescue

./: .dvcignore  .flake8  .gitignore  Dockerfile  Dockerfile.api  Procfile  README.API.md  README.md  Snakefile  activate_venv.sh  config.yaml  images2video.py  install_airflow.sh  pyproject.toml  run_agent.ipynb
.database/: data.db.dvc  data_backup.db
.github/workflows/: ci.yml
.streamlit/: config.toml
agent/: agent.py  base_agent.py  llm_agent.py  prompts.py
dags/: model_training_dag.py
datasamples/: 0000.json  0001.json
environment/: environment.py
experiments/: environment.py  game.py
experiments/discharge_feature_exp/version_1/: rollout.json
experiments/long-term-strategy_exp/version_2/: rollout.json
pipeline/: inference_two_drones.py  run_agent.ipynb
pipeline/configs/: inference_config.yaml
src/: __init__.py  app.py  postprocess_dataset.ipynb
src/airflow/: Dockerfile
src/annotation_app/: app.py
src/api/: __init__.py  config.yaml  inference_test.py  main.py  models.py  service.py
src/cli/: cli.py
src/config/: setup.yaml
src/data_analysis/: commander_train_dataset.pkl  commander_val_dataset.pkl  dataset_preparation.ipynb  postprocess_dataset.ipynb  rescuer_train_dataset.pkl  rescuer_val_dataset.pkl  sample_0.txt  sample_1.txt  sample_15.txt  sample_16.txt  sample_17.txt  sample_18.txt  sample_19.txt  sample_2.txt  sample_20.txt  sample_3.txt  sample_4.txt  scout_train_dataset.pkl  scout_val_dataset.pkl  train_dataset.pkl  val_dataset.pkl
src/data_processing/: __init__.py  gdrive_loader.py  json_dataloader.py  json_sample_model.py
src/database/: __init__.py  db.py  scripts.py
src/dataset/: dataset_cli.py  dataset_v1.py  dataset_v2.py
src/pipeline/: dataset.py  test.py  train.py
src/scripts/: generate_sample.py
tests/: conftest.py  test_database.py  test_env.py
tests/assets/: 0001.json  0002.json  0003.json  0004.json
v1/agent/: llm_agent.py
v1/pipeline/: inference_single_drone.py  inference_two_drones.py
v2/: run.ipynb
v2/actors/: rescuer.py  scoute.py
v2/agents/: action_agent.py  communicator.py  decision_maker.py  decision_maker_extended.py  state_descriptor_agent.py  strategy_agent.py
v2/environment/: constants.py  environment.py  visualize_rollout.ipynb
v2/interfaces/: agent_schema.py
v2/states/: agent_state.py  test.ipynb
v2_1/: annotation_app.py  app.py  generate_sample.py  session_state_controller.py  setup.yaml  variables.py
v2_1/app_utils/: render_instance_as_html.py  render_objects_to_html.py
v2_1/config/: setup.yaml
v2_1/datasamples/: 0001.json
v2_1/scripts/: generate_sample.py
(+77 files in other folders)
