[tool.poetry]
name = "DroneRescue"
version = "0.1.0"
description = ""
authors = ["Evgenii Iurin <iurin.evgenii@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]
package-mode = true

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^11.0.0"
pre-commit = "^4.0.1"
hydra-core = "^1.3.2"
python-dotenv = "^1.0.1"
streamlit = "^1.44.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
