[tool.poetry]
name = "DroneRescue"
version = "0.1.0"
description = ""
authors = ["Evgenii Iurin <iurin.evgenii@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]
package-mode = true

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pillow = "^11.0.0"
pre-commit = "^4.0.1"
hydra-core = "^1.3.2"
python-dotenv = "^1.0.1"
streamlit = "^1.44.1"
loguru = "^0.7.3"
pytest = "^8.4.1"
graphviz = "^0.21"
google-api-python-client = "^2.175.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.2"
sqlalchemy = "^2.0.41"
torch = "^2.8.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
drone-rescue = "src.cli.cli:app"
