[tool.poetry]
name = "DroneRescue"
version = "0.1.0"
description = ""
authors = ["Evgenii Iurin <iurin.evgenii@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]
package-mode = true

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pillow = "^11.0.0"
pre-commit = "^4.0.1"
hydra-core = "^1.3.2"
python-dotenv = "^1.0.1"
streamlit = "^1.44.1"
loguru = "^0.7.3"
pytest = "^8.4.1"
graphviz = "^0.21"
google-api-python-client = "^2.175.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.2"
torch = "^2.8.0"
transformers = "^4.56.1"
sentencepiece = "^0.2.1"
mlflow = ">=3.3.2,<3.4.0"
omegaconf = "^2.3.0"
sqlalchemy-utils = "^0.42.0"
jwt = "^1.4.0"
flask-limiter = "3.5.0"
snakemake = "^9.11.2"
dvc = {extras = ["gdrive"], version = "^3.63.0"}
sqlalchemy = "^2.0.43"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
drone-rescue = "src.cli.cli:app"
